--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "5.1.4"
-python-decouple = "3.8"
+django = "*"
+python-decouple = "*"
+django-crispy-forms = "*"
 
 [dev-packages]
 
