--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 django = "*"
 python-decouple = "*"
 django-crispy-forms = "*"
+django-braces = "*"
+crispy-bootstrap4 = "*"
 
 [dev-packages]
 
